Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31301

Delayed QMimeData request fails on OS X

    XMLWordPrintable

Details

    • macOS
    • ad66fa0dc18f20f3ceb5916ac791231c067b5898

    Description

      By following this drag&drop example it should be possible to implement delayed request for drag & drop data: http://qt-project.org/doc/qt-4.8/draganddrop-delayedencoding.html

      However this fails on OS X where the clipboard data is requested immediately once the drag & drop event is started. This makes it impossible to delay heavy data operations to the point where the object is actually dropped on the target.
      This works correctly at least on Windows.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sorvig Morten Sørvig
            kileppal Kimmo Leppälä
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes